# pico-littlefs-usb

./: .gitmodules  CMakeLists.txt  FAT_OPERATION.md  README.md  littlefs_driver.c  main.c  mimic_fat.c  onboard_led.c  unicode.c  usb_fat_mimic_driver.c  usb_msc_driver.c
include/: bootsel_button.h  mimic_fat.h  onboard_led.h  unicode.h
tests/: CMakeLists.txt  main.c  test_create.c  test_delete.c  test_large_fat.c  test_large_file.c  test_move.c  test_read.c  test_rename.c  test_update.c  test_write.c  tests.h  util.c
